apps/registry/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
